# agr_literature_service

./: .coveragerc  .env  .env.kenichi  .env.local.deb  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  alembic.ini  apply_alembic_migration.sh  check_tests.py  cleanup.sh  conftest.py  crontab  debug_functest.sh  docker-compose-functest.yml  docker-compose-test.yml  docker-compose.yaml  gunicorn.conf.py  ids.txt  mypy.config  pgsync_schema.json  pgsync_start.sh  postgresql.conf  pyproject.toml  pytest.ini  redis.conf  requirements.dev.txt  requirements.txt  run_tests.sh  setup.cfg  sync_data.sh  test.env  tests.sh  uvicorn_worker.py  write_timestamp.sh
agr_cognito_auth/: __init__.py  cognito_auth.py  cognito_permissions.py  config.py  dependencies.py
agr_literature_service/: global_utils.py
alembic/: env.py
backend/app/: main.py  (+4 more)
debezium/: elasticsearch-query-examples.txt  elasticsearch-settings-public.json  elasticsearch-settings.json  elasticsearch-sink-public.json  elasticsearch-sink.json  elasticsearch_settings.json  heal_publication.sh  ksql_queries.ksql  postgres-source-citation.json  postgres-source-copyright-license.json  postgres-source-cross_reference.json  postgres-source-extract-fields.json  postgres-source-joined_tables.json  postgres-source-merge.json  postgres-source-mod-corpus-association.json  postgres-source-mod-referencetype.json  postgres-source-mod.json  postgres-source-public-tables.json  postgres-source-reference.json  postgres-source-referencetype.json  postgres-source-resource.json  postgres-source-topic-entity-tag-source.json  postgres-source-unified.json  postgres-source.json  queries.ksql  rebuild_index.sh  setup.sh  setup_connectors.sh  setup_elasticsearch.sh  status_manager.sh
docker/: Dockerfile.app  Dockerfile.app-test.env  Dockerfile.app.env  Dockerfile.dev  Dockerfile.dev.env  Dockerfile.env  Dockerfile.pgsync.env  api.dockerfile  automated_scripts.dockerfile  debezium_connector.dockerfile  debezium_setup.dockerfile  debezium_tables_aggregator.dockerfile  dev-app.dockerfile  file_uploader.dockerfile  flysql.dockerfile  initdb.dockerfile  ksqldb.dockerfile  pgsync.dockerfile  test_runner.dockerfile  tests.dockerfile  xml_processing.dockerfile
docs/: migration_users_id_to_curie.md  test-review-documentation.md
fastapi_okta/: __init__.py  auth_okta.py
file_uploader/: move_uploaded_files.sh  upload_files.sh
non_pr_tests/: README.txt
reverse_proxy/: Dockerfile  nginx_dev.conf  nginx_prod.conf
src/: config.py  get_pubmed_xml.py  helloworld.py  main.py  migrate.py  server.py
tests/: conftest.py  fixtures.py  init_test_db.sh  mock_data_patterns.json  populate_test_db.py  test_debezium_integration.py  utils.py
(+1393 files in other folders)
